--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ html,body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 25px;
+    margin-left: 20px;
 }
 
 .navbar .links-a a {
@@ -59,9 +59,9 @@ html,body {
 }
 
 .navbar .logo-name {
-    font-size: 15px;
+    font-size: 1.2rem;
     position: absolute;
-    right: 30px;
+    right: 15px;
     color: #ccc;
     animation: trans 3s linear infinite alternate;
 }
@@ -437,6 +437,7 @@ before
 HTML
 تعمل بها اشكال والوان
 }
+
 
 
 
