--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ html,body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    border-radius: 6px;
+/*     border-radius: 6px; */
     gap: 30px;
     width: 100%;
     height: 40px;
@@ -32,7 +32,7 @@ html,body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 .navbar .links-a a {
@@ -59,7 +59,7 @@ html,body {
 }
 
 .navbar .logo-name {
-    font-size: 1.2rem;
+    font-size: 1rem;
     position: absolute;
     right: 15px;
     color: #ccc;
@@ -437,6 +437,7 @@ before
 HTML
 تعمل بها اشكال والوان
 }
+
 
 
 
